--- a/init.target.rc
+++ b/init.target.rc
@@ -54,7 +54,7 @@ on fs
     restorecon_recursive /persist
 
     wait /dev/block/bootdevice/by-name/modem
-    mount vfat /dev/block/bootdevice/by-name/modem /firmware ro context=u:object_r:firmware_file:s0,shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
+    mount vfat /dev/block/bootdevice/by-name/modem /firmware rw context=u:object_r:firmware_file:s0,shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
     write /sys/kernel/boot_adsp/boot 1
 
 on post-fs-data
@@ -74,7 +74,7 @@ on post-fs-data
 
 #start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
-    class late_start
+    class main
     user camera
     group camera system inet input graphics
 
@@ -84,7 +84,7 @@ on init
 #enable zram
 on property:ro.config.zram=true
     swapon_all fstab.qcom
-    write /proc/sys/vm/swappiness 100
+    write /proc/sys/vm/swappiness 130
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
@@ -103,7 +103,6 @@ service qrngp /system/bin/qrngp -f
    user root
    group root
    oneshot
-   disabled
 
 on property:sys.boot_completed=1
    start qrngp
@@ -113,15 +112,14 @@ service qseecomd /system/bin/qseecomd
    user root
    group root
 
-#service aostlmd /system/bin/aostlmd
-#   class late_start
-#   user system
-#   group system net_raw
+service aostlmd /system/bin/aostlmd
+class main
+user system
+group system net_raw
 
 service perfd /system/vendor/bin/perfd
    class main
    user root
-   disabled
 
 service thermal-engine /system/vendor/bin/thermal-engine
    class main
@@ -132,12 +130,12 @@ service thermal-engine /system/vendor/bin/thermal-engine
    group root
 
 service time_daemon /system/bin/time_daemon
-   class late_start
+   class main
    user root
    group root
 
 service audiod /system/bin/audiod
-   class late_start
+   class main
    user system
    group system
 
@@ -171,7 +169,6 @@ service imsdatadaemon /system/bin/imsdatadaemon
     user system
     socket ims_datad stream 0660 system radio
     group system wifi radio inet net_raw log qcom_diag net_admin
-    disabled
 
 on property:sys.ims.QMI_DAEMON_STATUS=1
     start imsdatadaemon
@@ -181,21 +178,18 @@ service ims_rtp_daemon /system/bin/ims_rtp_daemon
    user system
    socket ims_rtpd stream 0660 system radio
    group radio net_raw diag qcom_diag log inet
-   disabled
 
 service imscmservice /system/bin/imscmservice
    class main
    user system
    group radio net_raw diag qcom_diag log
-   disabled
 
 on property:sys.ims.DATA_DAEMON_STATUS=1
     start ims_rtp_daemon
     start imscmservice
 
 service ppd /system/bin/mm-pp-daemon
-    class late_start
-    disabled
+    class main
     user system
     socket pps stream 0660 system system
     group system graphics
@@ -208,7 +202,7 @@ on property:init.svc.surfaceflinger=running
 
 on charger
     wait /dev/block/bootdevice/by-name/system
-    mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=1
+    mount ext4 /dev/block/bootdevice/by-name/system /system rw barrier=1
     chown root system /sys/class/power_supply/bms/current_now
     chown root system /sys/class/power_supply/bms/voltage_ocv
     chmod 0664 /sys/class/power_supply/bms/current_now
@@ -221,7 +215,6 @@ service hbtp /system/vendor/bin/hbtp_daemon
     class main
     user root
     group root
-    disabled
 
 service dts_configurator /system/bin/dts_configurator
     class main
